istio/istio-egress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - edition.cnn.com
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-cnn
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: cnn
# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: gateway-routing
# spec:
#   hosts:
#   - edition.cnn.com
#   exportTo:
#   - "*"
#   gateways:
#   - mesh
#   - istio-egressgateway
#   http:
#   - match:
#     - port: 80
#       gateways:
#       - mesh
#     route:
#     - destination:
#         host: istio-egressgateway.istio-system.svc.cluster.local
#   - match:
#     - port: 80
#       gateways:
#       - istio-egressgateway
#     route:
#     - destination:
#         host: edition.cnn.com
