istio/istio-ingress-service-web-api.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-ingress-web-api
spec:
  hosts:
    - "*"
  gateways:
    - gateway-ingress-http
    - istio-egressgateway
  http:
    - match:
        - uri:
            prefix: /products
      rewrite:
        uri: "/"
      route:
        - destination:
            host: products
            subset: v1
          weight: 50
        - destination:
            host: products
            subset: v2
          weight: 50
    # - match:
    #     - uri:
    #         prefix: /httpbin
    #       # gateways:
    #       #   - istio-egressgateway
    #   rewrite:
    #     uri: "/"
    #   route:
    #     - destination:
    #         host: httpbin.org
    #         port:
    #           number: 443
    # - match:
    #     - uri:
    #         prefix: /min
    #       gateways:
    #         - istio-egressgateway
    #       port: 80
    #   rewrite:
    #     uri: "/"
    #   route:
    #     - destination:
    #         host: edition.cnn.com
    #         subset: cnn
    #         port:
    #           number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-cnn-through-egress-gateway
spec:
  hosts:
  - edition.cnn.com
  gateways:
  - istio-egressgateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: cnn
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - istio-egressgateway
      port: 80
    route:
    - destination:
        host: edition.cnn.com
        port:
          number: 80
      weight: 100
